# cppbackend3

.github/workflows/: main.yml  Копия с сервера main.yml
sprint3/problems/find_return/solution/src/: application.cpp  application.h  boost_json.cpp  boost_json.h  collision_detector.h  comand_line.h  geom.h  json_loader.cpp  logging_request_handler.cpp  model.cpp  model.h
sprint3/problems/find_return/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather-tests/solution/: Dockerfile
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gather/solution/src/: collision_detector.h
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/gen_objects/solution/src/: boost_json.cpp  json_loader.h  model.cpp  tick.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/scores/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/scores/solution/src/: application.cpp  application.h  boost_json.cpp  boost_json.h  collision_detector.cpp  extra_data.cpp  extra_data.h  json_loader.cpp  logging_request_handler.h  loot_generator.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tick.h
sprint3/problems/scores/solution/tests/: model-tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: application.cpp  application.h  boost_json.cpp  boost_json.h  comand_line.cpp  http_server.h  json_loader.cpp  logger.cpp  main.cpp  model.h
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint3/problems/tv/solution/tests/: catch_controller_tests.cpp  catch_tv_tests.cpp  Сценарий.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: urldecode.cpp
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/src/: main.cpp  urlencode.cpp
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/src/app/: use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-1/solution/src/domain/: author.h  book.h
sprint4/problems/bookypedia-1/solution/src/menu/: menu.cpp  menu.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: struct_info.h  view.cpp  view.h
sprint4/problems/bookypedia-1/solution/tests/: use_case_tests.cpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp  main.cpp
sprint4/problems/bookypedia-2/solution/src/app/: unit_of_work.h  use_cases.h  use_cases_impl.cpp  use_cases_impl.h
sprint4/problems/bookypedia-2/solution/src/domain/: author.h  book.h  tag.h  tag_fwd.h
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-2/solution/src/ui/: struct_info.cpp  struct_info.h  view.cpp  view.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: cmd_manager.cpp  cmd_manager.h  json.cpp  json.h  main.cpp  request_handler.cpp  request_handler.h  sql_server.cpp  sql_server.h
sprint4/problems/leave_game/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/data/: config.json
sprint4/problems/leave_game/solution/src/: main.cpp
sprint4/problems/leave_game/solution/src/app/: application.cpp  application.h  tick.cpp  tick.h  unit_of_work.h
sprint4/problems/leave_game/solution/src/db/: connection_pool.cpp  connection_pool.h  db.cpp  db.h
sprint4/problems/leave_game/solution/src/domain/: collision_detector.cpp  collision_detector.h  geom.h  model.cpp  model.h  model_serialization.cpp  model_serialization.h  records.h
sprint4/problems/leave_game/solution/src/http/: http_server.cpp  http_server.h  request_handler.cpp  request_handler.h
sprint4/problems/leave_game/solution/src/json/: extra_data.h  json.cpp  json.h  json_loader.cpp  json_loader.h
sprint4/problems/leave_game/solution/src/logger/: logger.cpp  logger.h  logging_request_handler.h
sprint4/problems/leave_game/solution/src/util/: comand_line.cpp  comand_line.h
sprint4/problems/leave_game/solution/tests/: collision-detector-tests.cpp  loot_generator_tests.cpp  model-tests.cpp  state-serialization-tests.cpp
